--- a/web/src/locale/en.json
+++ b/web/src/locale/en.json
@@ -1,29 +1,44 @@
 {
+    "navigation":{
+        "about-me": "About Me"
+    },
     "home": {
+        "header": {
+            "title": "Web Developer",
+            "subtitle": "Creating content to make internet even bigger"
+        },
         "carousel": {
-            "html5": {
+            "html5":{
                 "title":"HTML5 & CSS3",
-                "text": "Test english text HTML 5 y CSS 3"
+                "text": "Layout with CSS, structure and HTML5 tag naming"
             },
             "js": {
                 "title":"JS",
-                "text": "Test english text Javascript"
+                "text": "Creation and maintenance of Javascript functions (ES5 and ES6) for web pages"
             },
             "vuejs": {
                 "title":"Vue JS",
-                "text": "Test english text Vue JS"
+                "text": "Creating simple projects in Vue JS (self-taught)"
             },
             "reactjs": {
-                "title":"React JS",
-                "text": "Test english text React JS"
+                "title":"ReactJS",
+                "text": "Creating simple projects in React JS (self-taught)"
             },
             "tailwind": {
                 "title":"Tailwind CSS",
-                "text": "Test english text Tailwind CSS"
+                "text": "Elements layout using the Tailwind CSS library"
             },
             "docker": {
                 "title":"Docker",
-                "text": "Test english text Docker"
+                "text": "Installing and mounting volumes, containers and images in Docker"
+            },
+            "magento": {
+                "title":"Magento",
+                "text": "Management, maintenance and creation of modules for websites created with Magento 1 and Magento 2"
+            },
+            "mysql": {
+                "title":"MySQL",
+                "text": "Database management for web pages created with Magento"
             }
         }
     }
