--- a/web/src/locale/es.json
+++ b/web/src/locale/es.json
@@ -7,6 +7,10 @@
             "title": "Desarrollador Web",
             "subtitle": "Creando contenido para hacer que Internet sea aún más grande"
         },
+        "about-web": {
+            "title": "Sobre esta Web",
+            "text":"Esta web la he creado utilizando Vite, VueJS, Gulp + Sass y Docker"
+        },
         "carousel": {
             "experience":"Experiencia en lenguajes de programación",
             "html5": {
@@ -53,6 +57,31 @@
             "2nd-paragraph":"He nacido y crecido en Olleria, un pueblecito pequeño al sur de Valencia que es famoso por sus vidrios.",
             "3rd-paragraph":"Me caracterizo por intentar tener siempre buen humor y tratar con respeto a los demas.",
             "4th-paragraph":"Soy capaz de adaptarme a cada situación. Siempre he intentado sacar mi máxima productividad y tengo capacidad de aprender rápidamente."
+        },
+        "experience": {
+            "title":"Profesional Experience Experiencia",
+            "onestic": {
+                "title": "Programador web Onestic | Alcoi ",
+                "text": "Diseño, desarrollo y mantenimiento de sitios web especializados en el e-commerce con Magento 1 y Magento 2."
+            },
+            "panaderia": {
+                "title": "Dependiente de panadería o pastelería | Olleria ",
+                "text": "Comercialización y venta de productos de panadería y pastelería en el negocio familiar"
+            }
+        },
+        "studies": {
+            "title":"Estudios",
+            "ies-vermellar":{
+                "text":"IES Vermellar: Educacion secundaria Obligatoria (ESO)"
+            },
+            "ies-estacio":{
+                "title":"IES L'Estacio",
+                "text-1":"Grado medio de sistema microinformaticos y redes (SMX)",
+                "text-2":"Grado superior en desarrollo de Aplicaciones Web (DAW)"
+            }
+        },
+        "contact": {
+            "text":"Si necesitas mas información sobre mi o deseas simplemente ponerte en contacto conmigo, haz click sobre el icono de mail"
         }
     }
 }
