Fix errors detected on mobile view

--- a/web/src/locale/es.json
+++ b/web/src/locale/es.json
@@ -59,7 +59,7 @@
             "4th-paragraph":"Soy capaz de adaptarme a cada situación. Siempre he intentado sacar mi máxima productividad y tengo capacidad de aprender rápidamente."
         },
         "experience": {
-            "title":"Profesional Experience Experiencia",
+            "title":"Experiencia",
             "onestic": {
                 "title": "Programador web Onestic | Alcoi ",
                 "text": "Diseño, desarrollo y mantenimiento de sitios web especializados en el e-commerce con Magento 1 y Magento 2."
